--- a/pa1.html
+++ b/pa1.html
@@ -11,7 +11,7 @@
     <section>
       <h1>Downloads</h1>
       <hr>
-      <p><a href="imagingLinux.zip">Linux Binary</a> - Compiled with GCC on the current Ubuntu LTS (16.04)</p>
+      <p><a href="imagingLinux.zip">Linux Binary</a> - Compiled with GCC 5.4.0 on the current Ubuntu LTS (16.04). Tested with an NVidia Geforce GTX 750 TI</p>
       <h1>Prerequisites</h1>
       <hr>
       <p>This program has some library prerequisites. Please ensure you have GLFW 3 and GLEW installed. This program uses OpenGL for display purposes, and requires at least OpenGL 4.1. This version was originally chosen as it is the highest OpenGL version that Mac OSX supports. While it's probably not strictly required for this assignment, my renderer expects this version, and I unfortunately did not have time to refactor for 3.X support.</p>
